<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <!--First Linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="28sp"
            android:textColor="@color/city"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:layout_marginEnd="20dp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/weather" />

    </LinearLayout>

    <!--Second Linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            tools:ignore="NestedWeights"
            app:cardBackgroundColor="@color/blue_700">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:textSize="34sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/green_700">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/humid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:textSize="34sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!--Third Linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            tools:ignore="NestedWeights"
            app:cardBackgroundColor="@color/orange">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textColor="@color/text"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textSize="38sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gust"
                            android:textColor="@color/text"
                            android:padding="5dp"
                            android:layout_margin="10dp"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/gust"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deg"
                            android:textColor="@color/text"
                            android:padding="5dp"
                            android:layout_margin="10dp"
                            android:textSize="20sp" />
                        <TextView
                            android:id="@+id/deg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <!--Fourth Linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            tools:ignore="NestedWeights"
            app:cardBackgroundColor="@color/red_500">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:textSize="34sp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/teal_700">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibility"
                    android:textColor="@color/text"
                    android:padding="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:textSize="34sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>